fixes fair image misalignment (closes #3078)

--- a/apps/fair/stylesheets/header.styl
+++ b/apps/fair/stylesheets/header.styl
@@ -14,7 +14,7 @@
   #fair-search-container
     display inline-block
     vertical-align top
-    margin 25px 0 0 90px
+    margin 20px 0 0 90px
     input
       width 330px
       border-color transparify(gray-color, black)
